@@ -116,6 +116,7 @@ images/insert.png
 images/iphone-icon.png
 images/light-off.png
 images/light-on.png
+images/light-unknown.png
 images/lightbulb.png
 images/lightbulboff.png
 images/lock_closed.png
