@@ -51,6 +51,7 @@ Version 1.0.10 (March xxth 2013)
 - Changed: Excluded TE293 for windows systems
 - Implemented: Started working on support for the CM180i
 - Implemented: Unix update script
+- Implemented: Scenes can now be added to the dashboard
 
 Version 1.0.9 (February 17th 2013)
 - Implemented: OWL113 option to display in Ampere/Usage
